--- a/requirements.txt
+++ b/requirements.txt
@@ -8,7 +8,8 @@ nltk
 pytest
 tensorflow
 matplotlib
-Pillow>=7.1.0,<10
+Pillow>=7.1.0,<10  # Compatible with Streamlit 1.25.0
 streamlit==1.25.0
 numpy
+
 
